Closed Bug 1592780 Opened 6 years ago Closed 5 years ago

Empty alerts when browser.xul.error_pages.enabled=false

Categories

(Firefox :: Security, defect, P5)

69 Branch
defect

Tracking

()

RESOLVED FIXED
Firefox 77
Tracking Status
firefox77 --- fixed

People

(Reporter: mavit+bugzilla.mozilla.org, Assigned: stensonj)

References

()

Details

(Keywords: good-first-bug)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:69.0) Gecko/20100101 Firefox/69.0

Steps to reproduce:

  1. Went to about:config and set browser.xul.error_pages.enabled to false.
  2. Browsed to https://expired.badssl.com/

Actual results:

A window appeared titled "Alert", containing ⚠ and an OK button, but nothing else.

Expected results:

I should have received a message along the lines of "Firefox detected an issue and did not continue to expired.badssl.com. The web site is either misconfigured or your computer clock is set to the wrong time".

It's been a long time since browser.xul.error_pages.enabled=true was made the default. If changing it no-longer works reliably, perhaps it's time for this option to be removed?

Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0
20191030050308

gfx.webrender.force-disabled set to true doesn't help, so this isn't bug 1573710.

Status: UNCONFIRMED → NEW
Has STR: --- → yes
Component: Untriaged → Security
Ever confirmed: true

It's been a long time since browser.xul.error_pages.enabled=true was made the default. If changing it no-longer works reliably, perhaps it's time for this option to be removed?

Yeah, I'd say it's to time to say goodbye. Dan, Mike, does one of you have any old time anecdotes on what this is why we might still need it? :)

Flags: needinfo?(mozilla)
Flags: needinfo?(dveditz)

I don't see any reason to keep it. they've been pages for a very long time.

Flags: needinfo?(mozilla)

WFM, didn't even know we still had this pref.

Flags: needinfo?(dveditz)

Thanks!

Mentor: jhofmann
Keywords: good-first-bug
Priority: -- → P5

Hi there, I would like to work on this. Could you give me some pointers as to what to do to solve it? Thanks
(Requested info from reporter as mentor is away till Dec 3rd)

Flags: needinfo?(bugzilla.mozilla.org)

(In reply to Jacob Stenson from comment #6)

Hi there, I would like to work on this. Could you give me some pointers as to what to do to solve it? Thanks
(Requested info from reporter as mentor is away till Dec 3rd)

I'm not a Firefox developer, so can only offer very general advice. Start at https://dxr.mozilla.org/mozilla-central/search?q=regexp%3Abrowser.xul.error_pages.enabled&redirect=false. Remove any mention of the setting from the code, and modify anything that tries to use the setting so that it acts as if the setting was set to true. If the tests pass then you probably did it correctly. Good luck!

Flags: needinfo?(bugzilla.mozilla.org)

Hi, I am currently working on this bug but running into an issue where when I edit the code in the files found at the link you specified, nothing in the built browser changes. I can even delete entire files and the browser still functions as normal. I understand the reporter of this bug is not a firefox dev so does anyone else have any idea what is going on? Is there something I must do differently to fix this issue compared to other bugs? Thanks

Nothing in the built version of Firefox should change. You're removing code that isn't used anymore.

I know. I was removing code and testing but nothing was changing. It was as if I had not removed any code at all

Am I not also removing the "browser.xul.error_pages.enabled" setting from the about:config page?I have removed all mentions of the code from the files listed in this link: https://dxr.mozilla.org/mozilla-central/search?q=regexp%3Abrowser.xul.error_pages.enabled&redirect=false . but the setting still shows up in about:config and the browser still acts in the same way with regards to the setting being set to true or false.

(In reply to Mike Kaply [:mkaply] from comment #12)

This code is what puts it in about:config

https://searchfox.org/mozilla-central/source/modules/libpref/init/StaticPrefList.yaml#998

I have removed said code and nothing changes in about:config.

Is it bold in about:config? That means it was set by you, so it will stick around.

(In reply to Mike Kaply [:mkaply] from comment #14)

Is it bold in about:config? That means it was set by you, so it will stick around.

No it isnt bold. Could you try removing the code in StaticPrefList.yaml and see if you run into the same issue?

Are you doing an artifact build or a full Firefox build?

Changes to the YAML for preferences requires a full build (since there are cpp/h file changes).

Can you post your patch?

Im running "./mach run" in my firefox folder which opens up Nightly, are you saying I have to run "./mach build" to see any changes in about:config? I can post my patch with code I believe will work, although I have not tested it yet.

Yes, when you make code changes, you need to do ./mach build to build those changes.

https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions

I have not been using ./mach build for previous bugs I have been working on. Is this different due to the fact I am working on cpp/h files? Just to confirm

Yes, although I'm surprise you didn't need to build Firefox at all for your other bugs.

I built it originally and then started working on bugs, using ./mach run to test the updated code. From now on I'll use ./mach build to test code for this bug!

Assignee: nobody → stensonj
Status: NEW → ASSIGNED
Attachment #9110042 - Attachment description: Bug 1592780 - Empty alerts when browser.xul.error_paghes.enabled=false, r=mkaply → Bug 1592780 - Empty alerts when browser.xul.error_pages.enabled=false, r=mkaply

It seems like we're blocked on info from Thunderbird devs here and Mike wanted to reach out, has there been any progress?

Flags: needinfo?(mozilla)

I reached out, but they didn't have an answer (too long ago). I think we should assume they need it and just remove stuff for Firefox only.

Flags: needinfo?(mozilla)

Anyone we can needinfo on this issue?

Mentor: jhofmann

No, I'll pick up and remove the changes that break thunderbird.

Attachment #9110042 - Attachment description: Bug 1592780 - Empty alerts when browser.xul.error_pages.enabled=false, r=mkaply → Bug 1592780 - Empty alerts when browser.xul.error_pages.enabled=false, r?mkaply

This person on reddit had this error pages is disabled and it totally broke their browsing experience. We should remove it.

Argh. This got reviewed and I didn't get notified. Sorry, I'll get it checked in.

Pushed by mozilla@kaply.com: https://hg.mozilla.org/integration/autoland/rev/3f0183af40d2 Empty alerts when browser.xul.error_pages.enabled=false, r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: