Bug 1592780 - Empty alerts when browser.xul.error_pages.enabled=false, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D53848